<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.fragment.dialog.CustomDialogFragment"
    xmlns:tools="http://schemas.android.com/tools">


    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_sans_ms"
        android:textSize="15sp"
        android:text="@string/text_result"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/comic_sans_bold"
        android:gravity="center"
        android:maxLines="2"
        tools:text="@string/text_status_winner"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tv_result"
        app:layout_constraintStart_toStartOf="@id/tv_result"
        app:layout_constraintTop_toBottomOf="@id/tv_result" />


    <Button
        android:id="@+id/btn_replay"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:backgroundTint="@color/color_bg_replay"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/text_replay"
        app:layout_constraintLeft_toLeftOf="@id/tv_winner"
        app:layout_constraintRight_toRightOf="@id/tv_winner"
        app:layout_constraintTop_toBottomOf="@id/tv_winner" />

    <Button
        android:id="@+id/btn_return"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_width="200dp"
        android:backgroundTint="@color/color_bg_return"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/text_return"
        app:layout_constraintLeft_toLeftOf="@id/btn_replay"
        app:layout_constraintRight_toRightOf="@id/btn_replay"
        app:layout_constraintTop_toBottomOf="@id/btn_replay" />




</androidx.constraintlayout.widget.ConstraintLayout>
