<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.main.MainActivity"
    android:background="@color/bg_screen"
    android:id="@+id/menu">

    <TextView
        android:id="@+id/tv_choose_your_opponent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/comic_sans_ms"
        android:text="@string/text_choose_your_opponent"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_player_vs_player"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_landing_page_1"
        app:layout_constraintEnd_toEndOf="@id/tv_choose_your_opponent"
        app:layout_constraintStart_toStartOf="@id/tv_choose_your_opponent"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_your_opponent" />

    <TextView
        android:id="@+id/tv_player_vs_player"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/comic_sans_ms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/text_player_vs_player"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/iv_player_vs_player"
        app:layout_constraintStart_toStartOf="@id/iv_player_vs_player"
        app:layout_constraintTop_toBottomOf="@id/iv_player_vs_player" />

    <ImageView
        android:id="@+id/iv_player_vs_computer"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/ic_landing_page_2"
        app:layout_constraintEnd_toEndOf="@id/tv_player_vs_player"
        app:layout_constraintStart_toStartOf="@id/tv_player_vs_player"
        app:layout_constraintTop_toBottomOf="@id/tv_player_vs_player" />

    <TextView
        android:id="@+id/tv_player_vs_computer"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/comic_sans_ms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="@string/text_player_vs_cpu"
        android:layout_marginBottom="50dp"
        app:layout_constraintEnd_toEndOf="@id/iv_player_vs_computer"
        app:layout_constraintStart_toStartOf="@id/iv_player_vs_computer"
        app:layout_constraintTop_toBottomOf="@id/iv_player_vs_computer" />

</androidx.constraintlayout.widget.ConstraintLayout>